argocd/install/ingress/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: $(CERTIFICATE_ARN)
    alb.ingress.kubernetes.io/waf-acl-arn: $(WAF_ACL_ARN)
    alb.ingress.kubernetes.io/security-groups: $(ALB_SECURITY_GROUP_ID)
